Fixed updates visibility with fallbacks and changed images to portrait style

--- a/src/components/ProgressUpdates.css
+++ b/src/components/ProgressUpdates.css
@@ -24,7 +24,7 @@
 }
 
 .update-image {
-    height: 240px;
+    height: 480px; /* Taller for portrait feel */
     width: 100%;
     overflow: hidden;
 }
